[tool.poetry]
name = "bux-recorder"
version = "0.1.0"
description = ""
authors = ["Mikkel Roald-Arbøl <github.ggb9a@simplelogin.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
toml = "^0.10.2"
belay = "^0.15.1"
opencv-python = { version = "^4.5.5", optional = true }
#libcamera = { version = "*", optional = true }
picamera2 = { version = "^0.3.7", optional = true }

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
default = false

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.10.0"
colorlog = "^6.6.0"

[tool.poetry.extras]
cv = ["opencv-python"]
pi = ["picamera2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
