[metadata]
name = bux
version = 0.0.1
author = Mikkel Roald-Arbøl
author_email = mikkel@roald-arboel.com
description = An app for recording video and environmental data for animal behaviour.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roaldarbol/bux
project_urls =
    Bug Tracker = https://github.com/roaldarbol/bux/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src